# project_templater

./: README.md  desktop.ini
src/: hf_model_download.py  move_directories.py  py_templater-backup.py  py_templater.py  pyproject.toml
